welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: ')' expected but integer literal found.
  case (<5,_) => return 0
         ^teaParty:11: error: '=>' expected but '}' found.
}}
^